[tool.poetry]
name = "Pytank"
version = "0.1.3"
description = "Library to calculate POES by material balance equations of sub-saturaded Reservories"
authors = [
    "Erick Michael Villarroel Tenelema <erickv2499@gmail.com>",
    "Kevin Steeven Lopez Soria <ksls2000@outlook.es"
]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.1.4"
scipy = "^1.11.4"
matplotlib = "^3.8.2"
mkdocs = "^1.6.0"
mkdocs-simple-blog = "^0.0.9"
material = "^0.1"
mkdocstrings = "^0.25.1"
mkdocstrings-python = "^1.10.5"
black = "^24.4.2"
mkdocs-toc-sidebar-plugin = "^0.1.0"
jupyter = "^1.0.0"
mkdocs-jupyter = "^0.24.8"





[tool.poetry.group.dev.dependencies]
flake8 = "^7.1.0"
pytest = "^8.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

include = [
    "static/PyTank_logo.png",
    "examples_data/injection.csv",
    "examples_data/pressures.csv",
    "examples_data/production.csv",
    "examples_data/data_csv/pvt.csv",
    "LICENSE"]