[tool.poetry]
name = "pytank-doc"
version = "0.1.0"
description = ""
authors = ["KevinLopez <kelosori@espol.edu.ec>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
mkdocs = "^1.6.0"
mkdocs-material = "^9.5.30"
material = "^0.1"
mkdocstrings = "^0.25.2"
mkdocstrings-python = "^1.10.7"
black = "^24.4.2"
jupyter = "^1.0.0"
mkdocs-jupyter = "^0.24.8"
pymdown-extensions = "^10.9"
griffe = "^1.2.0"
pytank = "^0.1.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
JUPYTER_PLATFORM_DIRS = 1